force-app/main/default/objects/Quote/fields/Bank_charges__c.field-meta.xml
<CustomField>
    <fullName>Bank_charges__c</fullName>
    <label>Bank charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>