force-app/main/default/objects/Quote/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>HDFC Bank Ltd</fullName>
            </value>
            <value>
                <fullName>UCO Bank</fullName>
            </value>
            <value>
                <fullName>IDBI Bank Chandigarh</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>