force-app/main/default/objects/Quote/fields/Cosignee_Address__c.field-meta.xml
<CustomField>
    <fullName>Cosignee_Address__c</fullName>
    <formula>BillingStreet +&quot; &quot;+  BillingCity +&quot; &quot;+  BillingPostalCode +&quot; &quot;+ BillingState +&quot; &quot;+  BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Address</label>
    <type>Text</type>
</CustomField>