force-app/main/default/objects/Quote/fields/Courier_Details__c.field-meta.xml
<CustomField>
    <fullName>Courier_Details__c</fullName>
    <label>Courier Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>