force-app/main/default/objects/Quote/fields/Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denied_Reason__c</fullName>
    <label>Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>