force-app/main/default/objects/Quote/fields/Expiration_Date_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Hidden__c</fullName>
    <formula>Text(  ExpirationDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date(Hidden)</label>
    <type>Text</type>
</CustomField>