force-app/main/default/objects/Quote/fields/Exporter_Address__c.field-meta.xml
<CustomField>
    <fullName>Exporter_Address__c</fullName>
    <label>Exporter Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>