force-app/main/default/objects/Quote/fields/L_c_Establishment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>L_c_Establishment_Schedule__c</fullName>
    <label>L/c Establishment Schedule</label>
    <type>Date</type>
</CustomField>