force-app/main/default/objects/Quote/fields/L_c_Validity__c.field-meta.xml
<CustomField>
    <fullName>L_c_Validity__c</fullName>
    <label>L/c Validity</label>
    <type>Date</type>
</CustomField>