force-app/main/default/objects/Quote/fields/Last_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Shipment_Date__c</fullName>
    <label>Last Shipment Date</label>
    <type>Date</type>
</CustomField>