force-app/main/default/objects/Quote/fields/Other_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_Address__c</fullName>
    <label>Other Bank Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>