force-app/main/default/objects/Quote/fields/Other_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Terms__c</fullName>
    <label>Other Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>