force-app/main/default/objects/Quote/fields/Our_Banker_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Our_Banker_s_Address__c</fullName>
    <label>Our Banker&apos;s Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>