force-app/main/default/objects/Quote/fields/Our_Ref__c.field-meta.xml
<CustomField>
    <fullName>Our_Ref__c</fullName>
    <label>Our Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>