force-app/main/default/objects/Quote/fields/Party_s_Ref__c.field-meta.xml
<CustomField>
    <fullName>Party_s_Ref__c</fullName>
    <label>Party&apos;s Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>