force-app/main/default/objects/Quote/fields/Price_and_Basic__c.field-meta.xml
<CustomField>
    <fullName>Price_and_Basic__c</fullName>
    <label>Price and Basic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>