force-app/main/default/objects/Quote/fields/Quantity_Value_Variation__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Value_Variation__c</fullName>
    <label>Quantity / Value Variation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>