force-app/main/default/objects/Quote/fields/Total_Price_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Including_GST__c</fullName>
    <label>Total Price (Including GST)</label>
    <summarizedField>QuoteLineItem.GST_Price_Hidden__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>