force-app/main/default/objects/Quote/recordTypes/Actual_Quote.recordType-meta.xml
<RecordType>
    <fullName>Actual_Quote</fullName>
    <active>true</active>
    <label>Actual Quote</label>
</RecordType>