force-app/main/default/objects/Quote/recordTypes/Sample_Quote.recordType-meta.xml
<RecordType>
    <fullName>Sample_Quote</fullName>
    <active>true</active>
    <label>Sample Quote</label>
</RecordType>