force-app/main/default/objects/Quote/validationRules/Other_Bank_Address_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Bank_Address_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK ( Other_Bank_Address__c ),ISPICKVAL( Bank_Name__c , &apos;Other&apos;))</errorConditionFormula>
    <errorDisplayField>Other_Bank_Address__c</errorDisplayField>
    <errorMessage>&apos;Other Bank Address&apos; is required.</errorMessage>
</ValidationRule>