force-app/main/default/objects/Quote/validationRules/Quote_Denied.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Denied</fullName>
    <active>true</active>
    <description>If Quote status is Sample denied ,Denied Reason is mandatory.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status, &quot;Sample Denied&quot;),
OR(
ISBLANK ( TEXT( Denied_Reason__c ) )
)
)</errorConditionFormula>
    <errorDisplayField>Denied_Reason__c</errorDisplayField>
    <errorMessage>If Quote status is Sample denied ,Denied Reason is mandatory.</errorMessage>
</ValidationRule>